@@ -20,14 +20,23 @@ public class MXLookupService {
     private static final Pattern EMAIL_PATTERN = Pattern.compile(
             "^[A-Z0-9._%+-]+@[A-Z0-9.-]+\\.[A-Z]{2,}$", Pattern.CASE_INSENSITIVE);
 
+    private static final int SMTP_PORT = 25;
+    private static final int SOCKET_TIMEOUT_MS = 3000;
+
     private final Set<String> disposableDomains;
+    private final String ehloDomain;
+    private final String mailFromAddress;
 
     public MXLookupService(DisposableDomainConfig config) {
         this.disposableDomains = config.getDomainSet();
+        this.ehloDomain = "kaalb.in";         // configurable as needed
+        this.mailFromAddress = "support@kaalb.in";  // configurable as needed
     }
 
     public String categorizeEmail(String email) {
-        if (!isValidEmail(email)) return "Invalid";
+        if (!isValidEmail(email)) {
+            return "Invalid";
+        }
 
         String domain = extractDomain(email);
         if (domain == null) return "Invalid";
@@ -45,12 +54,23 @@ public class MXLookupService {
 
         try {
             if (isCatchAll(mxRecords, domain)) return "Catch-All";
-        } catch (Exception e) {
+        } catch (IOException e) {
             return "Unknown";
         }
 
-        Boolean smtpValid = isSmtpValid(mxRecords, email);
-        return smtpValid == null ? "Unknown" : smtpValid ? "Valid" : "Invalid";
+        Integer smtpStatus = smtpCheckStatus(mxRecords, email);
+        if (smtpStatus == null) return "Unknown";
+
+        switch (smtpStatus) {
+            case 1: // Valid user
+                return "Valid";
+            case 0: // User not found
+                return "UserNotFound";
+            case -1: // Invalid or rejected typically
+                return "Invalid";
+            default:
+                return "Unknown";
+        }
     }
 
     public boolean isValidEmail(String email) {
@@ -59,7 +79,8 @@ public class MXLookupService {
 
     public String extractDomain(String email) {
         int atIndex = email.indexOf('@');
-        return (atIndex > 0) ? email.substring(atIndex + 1).toLowerCase(Locale.ROOT) : null;
+        return (atIndex > 0 && atIndex < email.length() - 1) ?
+                email.substring(atIndex + 1).toLowerCase(Locale.ROOT) : null;
     }
 
     public boolean isDisposableDomain(String domain) {
@@ -73,9 +94,11 @@ public class MXLookupService {
         Attributes attrs = ctx.getAttributes(domain, new String[]{"MX"});
         Attribute attr = attrs.get("MX");
 
-        if (attr == null) return List.of();
+        if (attr == null) {
+            return Collections.emptyList();
+        }
 
-        return IntStream.range(0, attr.size())
+        List<String> mxRecords = IntStream.range(0, attr.size())
                 .mapToObj(i -> {
                     try {
                         return attr.get(i).toString();
@@ -85,55 +108,131 @@ public class MXLookupService {
                 })
                 .filter(s -> !s.isEmpty())
                 .collect(Collectors.toList());
+
+        return mxRecords.stream()
+                .sorted(Comparator.comparingInt(this::parsePriority))
+                .collect(Collectors.toList());
     }
 
-    public boolean isCatchAll(List<String> mxRecords, String domain) {
+    private int parsePriority(String mxRecord) {
+        String[] parts = mxRecord.split("\\s+");
+        try {
+            return Integer.parseInt(parts[0]);
+        } catch (NumberFormatException | ArrayIndexOutOfBoundsException e) {
+            return Integer.MAX_VALUE;
+        }
+    }
+
+    public boolean isCatchAll(List<String> mxRecords, String domain) throws IOException {
         String mxHost = extractMxHost(mxRecords.get(0));
-        String fakeEmail = UUID.randomUUID().toString().replace("-", "").substring(0, 8) + "@" + domain;
-        return Boolean.TRUE.equals(trySmtpRecipient(mxHost, fakeEmail));
+        String fakeEmail = generateRandomLocalPart() + "@" + domain;
+        Boolean catchAllResult = trySmtpRecipient(mxHost, fakeEmail);
+        return Boolean.TRUE.equals(catchAllResult);
     }
-
-    public Boolean isSmtpValid(List<String> mxRecords, String email) {
-        String mxHost = extractMxHost(mxRecords.get(0));
-        return trySmtpRecipient(mxHost, email);
-    }
-
     private Boolean trySmtpRecipient(String mxHost, String email) {
         try (Socket socket = new Socket()) {
-            socket.connect(new InetSocketAddress(mxHost, 25), 3000);
+            socket.connect(new InetSocketAddress(mxHost, SMTP_PORT), SOCKET_TIMEOUT_MS);
+            socket.setSoTimeout(SOCKET_TIMEOUT_MS);
+
             BufferedReader reader = new BufferedReader(new InputStreamReader(socket.getInputStream()));
             BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(socket.getOutputStream()));
 
             if (!readResponse(reader, "220")) return false;
 
-            sendCommand(writer, "EHLO kaalb.in");
+            sendCommand(writer, "EHLO " + ehloDomain);
             if (!readResponse(reader, "250")) return false;
 
-            sendCommand(writer, "MAIL FROM:<support@kaalb.in>");
+            sendCommand(writer, "MAIL FROM:<" + mailFromAddress + ">");
             if (!readResponse(reader, "250")) return false;
 
             sendCommand(writer, "RCPT TO:<" + email + ">");
             String response = reader.readLine();
             if (response == null) return null;
-            if (response.startsWith("250")) return true;
-            if (response.startsWith("550")) return false;
 
-            return null;
+            response = response.toLowerCase(Locale.ROOT);
+
+            if (response.startsWith("250")) return true;                  // Recipient accepted (valid)
+            if (response.startsWith("550") || response.startsWith("553") ||
+                    response.contains("recipient address rejected")) return false; // User not found / rejected
+
+            if (response.startsWith("450") || response.startsWith("451") || response.startsWith("452")) {
+                return null;                                              // Temporary failure - unknown
+            }
+
+            return null;  // Other responses inconclusive
+
         } catch (IOException e) {
-            return null;
+            return null;  // Could not connect or error - unknown status
+        }
+    }
+
+
+    /**
+     * Checks SMTP status returning:
+     * 1 for Valid
+     * 0 for User not found
+     * -1 for Invalid (other failures)
+     * null for unknown/inconclusive
+     */
+    private Integer smtpCheckStatus(List<String> mxRecords, String email) {
+        String mxHost = extractMxHost(mxRecords.get(0));
+        return trySmtpRecipientWithStatus(mxHost, email);
+    }
+
+    private Integer trySmtpRecipientWithStatus(String mxHost, String email) {
+        try (Socket socket = new Socket()) {
+            socket.connect(new InetSocketAddress(mxHost, SMTP_PORT), SOCKET_TIMEOUT_MS);
+            socket.setSoTimeout(SOCKET_TIMEOUT_MS);
+
+            BufferedReader reader = new BufferedReader(new InputStreamReader(socket.getInputStream()));
+            BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(socket.getOutputStream()));
+
+            if (!readResponse(reader, "220")) return -1;
+
+            sendCommand(writer, "EHLO " + ehloDomain);
+            if (!readResponse(reader, "250")) return -1;
+
+            sendCommand(writer, "MAIL FROM:<" + mailFromAddress + ">");
+            if (!readResponse(reader, "250")) return -1;
+
+            sendCommand(writer, "RCPT TO:<" + email + ">");
+            String response = reader.readLine();
+            if (response == null) return null;
+
+            response = response.toLowerCase(Locale.ROOT);
+
+            if (response.startsWith("250")) return 1;           // Valid recipient
+            if (response.startsWith("550")) return 0;           // User not found
+            if (response.startsWith("553") || response.contains("recipient address rejected")) return 0;
+
+            if (response.startsWith("450") || response.startsWith("451") ||
+                    response.startsWith("452") || response.startsWith("4")) return null; // Temporary failure
+
+            // For all other responses treat as invalid or unknown
+            return -1;
+
+        } catch (IOException e) {
+            return null; // Unknown due to network/error issues
         }
     }
 
     private void sendCommand(BufferedWriter writer, String command) throws IOException {
-        writer.write(command + "\r\n");
+        writer.write(command);
+        writer.write("\r\n");
         writer.flush();
     }
 
     private boolean readResponse(BufferedReader reader, String expectedPrefix) throws IOException {
         String line;
         while ((line = reader.readLine()) != null) {
-            if (line.startsWith(expectedPrefix)) return true;
-            if (line.startsWith("5") || line.startsWith("4")) return false;
+            if (line.startsWith(expectedPrefix)) {
+                // Check if multiline SMTP response (hyphen after code)
+                if (line.length() > 3 && line.charAt(3) == '-') continue;
+                return true;
+            }
+            if (line.startsWith("4") || line.startsWith("5")) {
+                return false;
+            }
         }
         return false;
     }
@@ -142,5 +241,9 @@ public class MXLookupService {
         String[] parts = mxRecord.split("\\s+");
         String host = parts.length >= 2 ? parts[1] : mxRecord;
         return host.endsWith(".") ? host.substring(0, host.length() - 1) : host;
+    }
+
+    private String generateRandomLocalPart() {
+        return UUID.randomUUID().toString().replace("-", "").substring(0, 8);
     }
 }
